change wget option

--- a/Dockerfile/master/Dockerfile
+++ b/Dockerfile/master/Dockerfile
@@ -22,7 +22,7 @@ RUN mkdir /usr/local/blender && \
 	curl -SL "$BLENDER_BZ2_URL" -o blender.tar.bz2 && \
 	tar -jxvf blender.tar.bz2 -C /usr/local/blender --strip-components=1 && \
 	rm blender.tar.bz2 && \
-        curl -SL https://github.com/84monta/blendenv/raw/master/master.blend -C /usr/local/blender/master.blend
+        curl -SL "https://github.com/84monta/blendenv/raw/master/master.blend" -o /usr/local/blender/master.blend
 
 
 ENTRYPOINT ["/usr/local/blender/blender", "-b /usr/local/blender/master.blend", "--addons netrender", "-a -noaudio", "-nojoystick"]
